tests/ui/suffix-mismatch.stderr
error: expected suffix `u8`
 --> $DIR/tests/ui/suffix-mismatch.rs:3:16
  |
3 | seq!(N in 0u8..1u16 {});
  |                ^^^^
